<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="520dp"
    android:padding="16dp"
    android:gravity="center_vertical">

    <!--锁定-->
    <Button
        android:id="@+id/button_action1"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:text="@string/button_lock"
        style="@style/mfh_button_text"
        android:gravity="center"
        android:visibility="gone"
        android:background="@drawable/btn_rectange_green"/>


    <!--交接班-->
    <Button
        android:id="@+id/button_action2"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:text="@string/button_handover"
        style="@style/mfh_button_text"
        android:gravity="center"
        android:background="@drawable/btn_rectange_green"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>

    <!--退出-->
    <Button
        android:id="@+id/button_action3"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:text="@string/button_logout"
        style="@style/mfh_button_text"
        android:gravity="center"
        android:background="@drawable/btn_rectange_red"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>


</LinearLayout>