<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:skin="http://schemas.android.com/android/skin"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rootview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mfh_colorPrimary"
                android:padding="@dimen/spacing_normal"
                skin:enable="true">

    <LinearLayout
        android:id="@+id/bottomview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal">

        <ImageView
            android:id="@+id/iv_hostserver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@null"
            android:src="@mipmap/ic_textlogo_mixicook"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/animProgressBar"
        style="@style/loading"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="InconsistentLayout"/>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_35"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_corner_white"
                android:divider="@drawable/divider_horizontal_line"
                android:orientation="vertical"
                android:padding="@dimen/spacing_micro"
                android:showDividers="middle">

                <EditText
                    android:id="@+id/et_username"
                    style="@style/mfh_edittext_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_login_account"
                    android:inputType="text|none"
                    android:minHeight="?android:attr/actionBarSize"
                    android:padding="@dimen/spacing_micro"/>

                <EditText
                    android:id="@+id/et_password"
                    style="@style/mfh_edittext_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_login_password"
                    android:inputType="textPassword"
                    android:minHeight="?android:attr/actionBarSize"
                    android:padding="@dimen/spacing_micro"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/mfh_colorPrimary"
                android:gravity="center"
                android:minHeight="?android:attr/actionBarSize"
                android:text="@string/button_login_signin"
                android:textColor="@color/material_white"
                android:textSize="@dimen/textsize_normal"
                tools:ignore="InconsistentLayout"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:divider="@drawable/divider_vertical_line"
            android:dividerPadding="@dimen/spacing_normal"
            android:gravity="center_horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/tv_retrievePwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:text="@string/button_login_retrieve_pwd"
                android:textColor="@color/white_60"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:text="@string/button_login_signup"
                android:textColor="@color/white_60"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
